--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HW-11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <div class="container">
+      <form id="searchForm">
+        <input
+          type="text"
+          id="searchImg"
+          placeholder="Search image..."
+          required
+        />
+        <button type="submit">Search</button>
+      </form>
+      <ul class="list-images"></ul>
+      <span class="loader">Loading</span>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
