add new fuctional of rendering photos

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       </form>
       <ul class="list-images"></ul>
       <span class="loader">Loading</span>
+      <button id="moreBtn" type="button">Load more</button>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
