fix some bugs & add css styles

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <button type="submit">Search</button>
       </form>
       <ul class="list-images"></ul>
-      <span class="loader">Loading</span>
+      <span class="loader">Loading images, please wait...</span>
       <button id="moreBtn" type="button">Load more</button>
     </div>
     <script type="module" src="./main.js"></script>
